fixed a spacing bug

--- a/src/Style/main.sass
+++ b/src/Style/main.sass
@@ -125,7 +125,7 @@ main
     .resource-icon
         transition: transform 200ms, opacity 200ms, filter 200ms, text-shadow 200ms
         font-size: 5rem
-        line-height: 3rem
+        // line-height: 3rem
 
     &.evade .resource-icon
         transform: rotate(5deg)
